--- a/cxcontainer/templates/base.html
+++ b/cxcontainer/templates/base.html
@@ -2,15 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %} CX Diagnostic {% endblock %}</title>
+    <title>{% block title %} CX Diagnosis {% endblock %}</title>
   </head>
   <body>
     <header>
+      <h1>CX Diagnosis</h1>
       <table>
         <tr>
-          <td style="width: 98%"><h1>CX Diagnostic</h1></td>
           {% if user.is_authenticated %}
-            <td><a href="{% url 'logout' %}">logout</a></td>
+            {% if user.is_clientuser %}
+              <td style="width: 80%" align="right"></td>
+              <td style="width: 5%" align="right"><a href="{% url 'home' %}">Home</a></td>
+              <td style="width: 10%"><a>Client User ID : </a></td>
+            {% elif user.is_csguser %}
+              <td style="width: 80%" align="right"></td>
+              <td style="width: 5%" align="right"><a href="{% url 'home' %}">Home</a></td>
+              <td style="width: 10%"><a>CSG User ID : </a></td>
+            {% elif user.is_cxsuperuser %}
+              <td style="width: 60%" align="right"></td>
+              <td style="width: 5%" align="right"><a href="{% url 'home' %}">Home</a></td>
+              <td style="width: 10%" align="right"><a href="{% url 'cxsuper_signup' %}">CX Admin Signup</a></td>
+              <td style="width: 10%" align="right"<a>CSG User Signup</a></td>
+              <td style="width: 10%" align="right"><a>Admin User ID : </a></td>
+            {% endif %}
+            <td style="width: 5%" align="right"><a>{{ user.username }} </a></td>
+          <td><a href="{% url 'logout' %}">logout</a></td>
           {% endif %}
         </tr>
       </table>
